--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,19 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      เกี่ยวกับเรา
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<ion-content class="ion-padding">
+  <p >
+    ศรัณยภาส บุญงาม <br>
+    นักเรียนระดับชั้น ปวช.2/3 <br>
+    สาขาเทคโนโลยีสารสนเทศ <br>
+    ฉันชอบกิน ข้าวหน้าเนื้อ <br>
+    ฉันชอบสี ม่วง <br>
+    เพื่อนที่สนิทชื่อ พีพี <br>
+    งานอดิเรก เล่นเกม ฟังเพลง เล่นดนตรี
+  </p>
 </ion-content>
