--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      รูปภาพ
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<ion-content>
+ <ion-img src="../../assets/img/01.jpg"></ion-img>
+
+  <ion-button expand="full" shape="round" (click)="GoToAbout()">
+    <ion-icon name="Person"></ion-icon>
+    เกี่ยวกับเรา
+    </ion-button>
+    <ion-button expand="full" shape="round" (click)="GoToContact()">
+      <ion-icon name="call"></ion-icon>
+      ติดต่อเรา
+      </ion-button>
+
 </ion-content>
